adding VT api code

--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -1,16 +1,16 @@
 home_dir=$(HOME)
-api_dir=${home_dir}/Kronos/src/api
+api_dir=${home_dir}/Titan/src/api
 
 build_api:
 
-	 @gcc -w -c -Wall -Werror -fpic ${api_dir}/Kronos_functions.c \
+	 @gcc -w -c -Wall -Werror -fpic ${api_dir}/VT_functions.c \
 	 ${api_dir}/utility_functions.c
-	 @gcc -w -shared -o libkronosapi.so ${api_dir}/Kronos_functions.o \
+	 @gcc -w -shared -o libvtapi.so ${api_dir}/VT_functions.o \
 	 ${api_dir}/utility_functions.o
-	 @mv libkronosapi.so /usr/lib
-	 @chmod 0777 /usr/lib/libkronosapi.so
+	 @mv libvtapi.so /usr/lib
+	 @chmod 0777 /usr/lib/libvtapi.so
 
-	 @cp ${api_dir}/Kronos_functions.h /usr/local/include
+	 @cp ${api_dir}/VT_functions.h /usr/local/include
 	 @cp ${api_dir}/utility_functions.h /usr/local/include
 
 	 @python setup.py install
@@ -19,5 +19,5 @@ clean:
 
 	@rm -rf build/
 	@rm -f *.o
-	@rm -f /usr/lib/libkronosapi.so > /dev/null
-	@rm -f /usr/local/include/Kronos_functions.h > /dev/null
+	@rm -f /usr/lib/libvtapi.so > /dev/null
+	@rm -f /usr/local/include/VT_functions.h > /dev/null
