--- a/src/tracer/tests/sleep-test/Makefile
+++ b/src/tracer/tests/sleep-test/Makefile
@@ -1,5 +1,5 @@
 home_dir=$(HOME)
-tracer_dir=${home_dir}/Kronos/src/tracer
+tracer_dir=${home_dir}/Titan/src/tracer
 test_dir=${tracer_dir}/tests/sleep-test
 
 clean:
@@ -14,8 +14,7 @@ build:
 run:
 	@echo "Starting Sleep Test ..."
 	@echo ${test_dir}/test > ${test_dir}/cmds.txt
-	tracer_test -f ${test_dir}/cmds.txt
-
+	python ${home_dir}/Titan/examples/example_vt_experiment.py --cmds_to_run_file=${test_dir}/cmds.txt
 	@echo "Sleep Test Finished ..."
 
 
