--- a/src/tracer/tests/socket-test/Makefile
+++ b/src/tracer/tests/socket-test/Makefile
@@ -1,5 +1,5 @@
 home_dir=$(HOME)
-tracer_dir=${home_dir}/Kronos/src/tracer
+tracer_dir=${home_dir}/Titan/src/tracer
 test_dir=${tracer_dir}/tests/socket-test
 
 clean:
@@ -11,7 +11,7 @@ build:
 
 run:
 	@echo "Starting Socket test ..."
-	tracer_test -f ${test_dir}/cmds.txt
+	python ${home_dir}/Titan/examples/example_vt_experiment.py --cmds_to_run_file=${test_dir}/cmds.txt
 	@echo "Socket Test Finished ..."
 
 start: run
