--- a/src/tracer/tests/thread-test/Makefile
+++ b/src/tracer/tests/thread-test/Makefile
@@ -1,5 +1,5 @@
 home_dir=$(HOME)
-tracer_dir=${home_dir}/Kronos/src/tracer
+tracer_dir=${home_dir}/Titan/src/tracer
 test_dir=${tracer_dir}/tests/thread-test
 
 clean:
@@ -21,7 +21,7 @@ run:
 run_python:
 	@echo "Starting Thread Test ..."
 	@echo "python thread.py" > ${test_dir}/cmds.txt
-	tracer_test -f ${test_dir}/cmds.txt
+	python ${home_dir}/Titan/examples/example_vt_experiment.py --cmds_to_run_file=${test_dir}/cmds.txt
 	@echo "Thread Test Finished ..."
 
 
