fixing compilation errors in core, tracer, api code

--- a/src/tracer/Makefile
+++ b/src/tracer/Makefile
@@ -15,11 +15,8 @@ build_tracer:
 	 @gcc -w -I/usr/local/include/perf -I/usr/local/lib/perf/include -I${tracer_dir}/utils \
 	 ${tracer_dir}/tracer.c ${tracer_dir}/utils.c ${tracer_dir}/utils/linkedlist.c \
 	 ${tracer_dir}/utils/hashmap.c -o tracer -lperf -lvtapi
-	 @gcc  -w ${tracer_dir}/tests/cmd_sender.c -o cmd_sender
 	 @chmod 777 tracer
-	 @chmod 777 cmd_sender
 	 @mv tracer /usr/bin
-	 @mv cmd_sender /usr/bin
 	 @cp /usr/local/lib/libperf.so.0 /usr/lib/
 	 @cd ${tracer_dir}/utils && $(MAKE) build
 
@@ -27,11 +24,8 @@ build_tracer_debug:
 	@gcc -w -I/usr/local/include/perf -I/usr/local/lib/perf/include -I${tracer_dir}/utils \
 	-D DEBUG ${tracer_dir}/tracer.c ${tracer_dir}/utils.c ${tracer_dir}/utils/linkedlist.c \
 	${tracer_dir}/utils/hashmap.c -o tracer -lperf -lvtapi
-	@gcc  -w ${tracer_dir}/tests/cmd_sender.c -o cmd_sender
 	@chmod 777 tracer
-	@chmod 777 cmd_sender
 	@mv tracer /usr/bin
-	@mv cmd_sender /usr/bin
 	@cp /usr/local/lib/libperf.so.0 /usr/lib/
 	@cd ${tracer_dir}/utils && $(MAKE) build
 
@@ -42,14 +36,13 @@ clean:
 	@rm -f *.o > /dev/null
 	@rm -f /usr/bin/tracer > /dev/null
 	@rm -f /usr/bin/tracer_test > /dev/null
-	@rm -f /usr/bin/cmd_sender > /dev/null
 	@cd ${tracer_dir}/utils && $(MAKE) clean
 
 build_tests:
 	@cd ${tracer_dir}/tests && $(MAKE) build
 	@cd ${tracer_dir}/utils && $(MAKE) build
 
-build: libs build_tracer build_tracer_test build_tests
+build: libs build_tracer build_tracer_debug build_tests
 
 debug: libs build_tracer_test build_tracer_debug build_tests
 
