fixing some more bugs to get INS-VT working correctly

--- a/src/tracer/tests/socket-test/Makefile
+++ b/src/tracer/tests/socket-test/Makefile
@@ -7,7 +7,7 @@ clean:
 
 build:
 	@echo "Building Socket Test ..."
-	@echo "python udp_server.py\npython udp_client.py" > ${test_dir}/cmds.txt
+	@echo "python ${test_dir}/udp_server.py\npython ${test_dir}/udp_client.py" > ${test_dir}/cmds.txt
 
 run:
 	@echo "Starting Socket test ..."
