adding code for app-vt testing

--- a/src/tracer/Makefile
+++ b/src/tracer/Makefile
@@ -12,18 +12,22 @@ libs:
 	
 
 build_tracer:
-	 @gcc -w -I/usr/local/include/perf -I/usr/local/lib/perf/include -I${tracer_dir}/utils \
+	@gcc -w -I/usr/local/include/perf -I/usr/local/lib/perf/include -I${tracer_dir}/utils \
 	 ${tracer_dir}/tracer.c ${tracer_dir}/utils.c ${tracer_dir}/utils/linkedlist.c \
 	 ${tracer_dir}/utils/hashmap.c -o tracer -lperf -lvtapi
-	 @chmod 777 tracer
-	 @mv tracer /usr/bin
-	 @cp /usr/local/lib/libperf.so.0 /usr/lib/
-	 @cd ${tracer_dir}/utils && $(MAKE) build
+	@chmod 777 tracer
+	@mv tracer /usr/bin
+	@gcc ${tracer_dir}/app_vt_test_tracer.c -o app_vt_test_tracer -lpthread -lvtapi
+	@mv app_vt_test_tracer /usr/bin
+	@cp /usr/local/lib/libperf.so.0 /usr/lib/
+	@cd ${tracer_dir}/utils && $(MAKE) build
 
 build_tracer_debug:
 	@gcc -w -I/usr/local/include/perf -I/usr/local/lib/perf/include -I${tracer_dir}/utils \
 	-D DEBUG ${tracer_dir}/tracer.c ${tracer_dir}/utils.c ${tracer_dir}/utils/linkedlist.c \
 	${tracer_dir}/utils/hashmap.c -o tracer -lperf -lvtapi
+	@gcc ${tracer_dir}/app_vt_test_tracer.c -o app_vt_test_tracer -lpthread -lvtapi
+	@mv app_vt_test_tracer /usr/bin
 	@chmod 777 tracer
 	@mv tracer /usr/bin
 	@cp /usr/local/lib/libperf.so.0 /usr/lib/
@@ -36,6 +40,7 @@ clean:
 	@rm -f *.o > /dev/null
 	@rm -f /usr/bin/tracer > /dev/null
 	@rm -f /usr/bin/tracer_test > /dev/null
+	@rm -f /usr/bin/app_vt_test_tracer > /dev/null
 	@cd ${tracer_dir}/utils && $(MAKE) clean
 
 build_tests:
