--- a/src/tracer/libperf/Makefile
+++ b/src/tracer/libperf/Makefile
@@ -221,7 +221,7 @@ AR = ar
 AUTOCONF = ${SHELL} /home/titan/Titan/src/tracer/libperf/build-aux/missing autoconf
 AUTOHEADER = ${SHELL} /home/titan/Titan/src/tracer/libperf/build-aux/missing autoheader
 AUTOMAKE = ${SHELL} /home/titan/Titan/src/tracer/libperf/build-aux/missing automake-1.15
-AWK = mawk
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
