fixing compilation issues and creating a testing framework

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -6,7 +6,7 @@ build:
 	
 
 clean:
-	@rm /bin/x64_synchronizer
+	@rm -f /bin/x64_synchronizer
 	@rm -f bin/*
 	@touch bin/README
 	@chmod 777 bin/README
