adding LoopIR pass

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -5,6 +5,8 @@ build:
 	@clang -o bin/timerfd_example -lvtllogic timerfd_example.c
 	@clang -o bin/tcp_server -lvtllogic tcp_server.c
 	@clang -o bin/tcp_client -lvtllogic tcp_client.c
+	@clang -O1 -c -emit-llvm loop_example.c -o loop_example.bc #-O1 flag here is crucial
+	@clang -O1 -lvtllogic -o bin/loop_example loop_example.c #-O1 flag here is crucial to enable loop optimization passes and loop set lookahead
 	@chmod 777 bin/x64_synchronizer
 	@chmod 777 bin/timerfd_example
 	@chmod 777 bin/tcp_server
@@ -14,8 +16,10 @@ build:
 	@chmod 777 /bin/x86_vt_spinner
 
 clean:
-	@rm -f /bin/x64_synchronizer
-	@rm -f /bin/x86_vt_spinner
 	@rm -f bin/*
+	@rm -f *.bc
+	@rm -f *.ll
+	@rm -f *.artifacts.json
+	@rm -f *.s
 	@touch bin/README
 	@chmod 777 bin/README
