--- a/CONFIG
+++ b/CONFIG
@@ -2,7 +2,7 @@
 
 # This flag would control whether lookahead tracking would be enabled at the compiler level
 # Set no to enable lookahead tracking. Set yes to disable it.
-DISABLE_LOOKAHEAD=yes
+DISABLE_LOOKAHEAD=no
 
 # This flag would control whether instruction cache simulation callback functions would be
 # inserted by the compiler. Set no to enable ins cache simulation. Set yes to disable it.
